--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://42.192.236.2:3306/blog?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://188.131.134.54:3306/blog?useUnicode=true&characterEncoding=utf-8
     username: root
     password: root
   jpa:
@@ -14,11 +14,16 @@ spring:
   #配置redis连接信息
 
 # redis 主从哨兵配置
-  redis:
-    sentinel:
-      master: mymaster
-      nodes: 42.192.236.2:26380,42.192.236.2:26382,42.192.236.2:26384
+#  redis:
+#    sentinel:
+#      master: mymaster
+#      nodes: 42.192.236.2:26380,42.192.236.2:26382,42.192.236.2:26384
     #password: hh974932539hh
+  redis:
+    host: 188.131.134.54
+    port: 6379
+    password: 123456
+
 
 
 
