--- a/pom.xml
+++ b/pom.xml
@@ -76,11 +76,11 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- Apache commons -->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.9</version>
-		</dependency>
+		</dependency>-->
 		<!--<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
