--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,9 +2,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://139.224.29.183/blog?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost/blog?useUnicode=true&characterEncoding=utf-8
     username: root
-    password: hh920124hh
+    password: root
   jpa:
     hibernate:
       ddl-auto: update
@@ -14,7 +14,7 @@ spring:
 
   #配置redis连接信息
   redis:
-    host: 192.168.40.88
+    host: 47.103.155.11
     port: 6379
     #password: 123456
     # 数据库索引（默认为0）
@@ -47,4 +47,4 @@ logging:
     com.yellowhao: debug
   file: log/blog-dev.log
 server:
-  port: 8080
+  port: 63333
